add CityProject, Country and Difficulty Providers